crates/scale/src/snapshots/telmo_scale__ui__tests__auto_zeroed.snap
---
source: crates/scale/src/ui.rs
expression: render(&app)
---
 Scale                                                                         ● touching

╭─ Weight ───────────────────────────────────────────────────────────────────────────────╮
│                                                                                        │
│                                      ███   ███                                         │
│                                      █ █   █ █                                         │
│                                      █ █   █ █                                         │
│                                      █ █   █ █                                         │
│                                      ███ █ ███  g                                      │
│                                                                                        │
│                                         ● ready                                        │
│                                                                                        │
│                       1  Rest one finger lightly on the trackpad                       │
│                       2  Keep it still… zeroing                                        │
│                       3  Place the item next to your finger                            │
╰────────────────────────────────────────────────────────────────────────────────────────╯





 space zero  u ounces  ? more  esc close
