crates/scale/src/snapshots/telmo_scale__ui__tests__help.snap
---
source: crates/scale/src/ui.rs
expression: render(&app)
---
 Scale                                                                         ● touching

╭─ Weight ───────────────────────────────────────────────────────────────────────────────╮
│                                                                                        │
│                                   █  ███ █ █   ███                                     │
│                                  ██    █ █ █   █                                       │
│                                   █  ███ ███   ███                                     │
│                   ╭─ Keys ─────────────────────────────────────────╮                   │
│                   │                                                │                   │
│                   │  space    zero the scale                       │                   │
│                   │  u        switch between grams and ounces      │                   │
│                   │  esc q    close                                │                   │
│                   │                                                │                   │
│                   ╰────────────────────────────────────────────────╯                   │
│                       3  Place the item next to your finger                            │
╰────────────────────────────────────────────────────────────────────────────────────────╯





 space zero  u ounces  ? more  esc close
