crates/scale/src/snapshots/telmo_scale__ui__tests__ounces.snap
---
source: crates/scale/src/ui.rs
expression: render(&app)
---
 Scale                                                                         ● touching

╭─ Weight ───────────────────────────────────────────────────────────────────────────────╮
│                                                                                        │
│                                    █ █   ███ ███                                       │
│                                    █ █     █ █ █                                       │
│                                    ███   ███ ███                                       │
│                                      █     █   █                                       │
│                                      █ █ ███ ███  oz                                   │
│                                                                                        │
│                                       ◌ zeroing…                                       │
│                                                                                        │
│                       1  Rest one finger lightly on the trackpad                       │
│                       2  Keep it still… zeroing                                        │
│                       3  Place the item next to your finger                            │
╰────────────────────────────────────────────────────────────────────────────────────────╯





 space zero  u grams  ? more  esc close
