crates/scale/src/snapshots/telmo_scale__ui__tests__settling.snap
---
source: crates/scale/src/ui.rs
expression: "render(&app_with(mock::snapshot(117.0, false)))"
---
 Scale                                                                         ● touching

╭─ Weight ───────────────────────────────────────────────────────────────────────────────╮
│                                                                                        │
│                                  ▀█  ▀█  ▀▀█   █▀█                                     │
│                                   █   █    █   █ █                                     │
│                                  ▀▀▀ ▀▀▀   ▀ ▀ ▀▀▀  g                                  │
│                                                                                        │
│                                       ◌ settling…                                      │
│                                                                                        │
│        Rest a finger on the trackpad, then set the object on it — keep touching.       │
│                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯








 space zero  u ounces  ? more  esc close
