crates/scale/src/snapshots/telmo_scale__ui__tests__stable.snap
---
source: crates/scale/src/ui.rs
expression: "render(&app_with(mock::snapshot(124.5, true)))"
---
 Scale                                                                         ● touching

╭─ Weight ───────────────────────────────────────────────────────────────────────────────╮
│                                                                                        │
│                                  ▀█  ▀▀█ █ █   █▀▀                                     │
│                                   █  █▀▀ ▀▀█   ▀▀█                                     │
│                                  ▀▀▀ ▀▀▀   ▀ ▀ ▀▀▀  g                                  │
│                                                                                        │
│                                        ● stable                                        │
│                                                                                        │
│        Rest a finger on the trackpad, then set the object on it — keep touching.       │
│                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯








 space zero  u ounces  ? more  esc close
