crates/scale/src/snapshots/telmo_scale__ui__tests__tare_without_touch.snap
---
source: crates/scale/src/ui.rs
expression: render(&app)
---
 Scale                                                                         ○ no touch

╭─ Weight ───────────────────────────────────────────────────────────────────────────────╮
│                                                                                        │
│                                      █▀█   █▀█                                         │
│                                      █ █   █ █                                         │
│                                      ▀▀▀ ▀ ▀▀▀  g                                      │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│        Rest a finger on the trackpad, then set the object on it — keep touching.       │
│                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯







  ✗  Nothing to zero. Rest a finger on the trackpad first.
 space zero  u ounces  ? more  esc close
