crates/scale/src/snapshots/telmo_scale__ui__tests__tared.snap
---
source: crates/scale/src/ui.rs
expression: render(&app)
---
 Scale                                                                         ● touching

╭─ Weight ───────────────────────────────────────────────────────────────────────────────╮
│                                                                                        │
│                                    ▀█  ▀▀█ █ █   █▀▀                                   │
│                                     █  █▀▀ ▀▀█   ▀▀█                                   │
│                                  ▀▀▀ ▀▀▀   ▀ ▀ ▀▀▀  g                                  │
│                                                                                        │
│                                        ● stable                                        │
│                                                                                        │
│        Rest a finger on the trackpad, then set the object on it — keep touching.       │
│                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯







  ✓  Zeroed.
 space zero  u ounces  ? more  esc close
