crates/scale/src/snapshots/telmo_scale__ui__tests__unavailable.snap
---
source: crates/scale/src/ui.rs
expression: render(&app_with(snapshot))
---
 Scale

╭─ No trackpad ──────────────────────────────────────────────────────────────────────────╮
│                                                                                        │
│  Needs a Mac with a Force Touch trackpad.                                              │
│                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯














 esc close
